[feature] add endpoint for export workshop signing
