# gestepm-model-api/src/main/java/com/epm/gestepm/modelapi/signings/workshop/dto/filter/WorkshopSigningExportFilterDto.java
@@ -1,0 +1,13 @@
+package com.epm.gestepm.modelapi.signings.workshop.dto.filter;
+
+import lombok.Data;
+
+import java.time.LocalDateTime;
+
+@Data
+public class WorkshopSigningExportFilterDto {
+
+    private LocalDateTime startDate;
+
+    private LocalDateTime endDate;
+}
