# gestepm-rest/src/main/java/com/epm/gestepm/rest/signings/warehouse/WarehouseSigningController.java
@@ -32,7 +32,10 @@ import org.springframework.context.ApplicationContext;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
+import java.time.LocalDateTime;
+import java.time.format.DateTimeFormatter;
 import java.util.List;
+import java.util.Optional;
 import java.util.Set;
 
 import static com.epm.gestepm.lib.logging.constants.LogLayerMarkers.REST;
@@ -62,9 +65,21 @@ public class WarehouseSigningController extends BaseController implements Wareho
     @LogExecution(operation = OP_READ)
     public ResponseEntity<ListWarehouseSigningsV1200Response> listWarehouseSigningsV1(List<String> meta
             , Boolean links, Set<String> expand, Long offset, Long limit, String order, String orderBy
-            , List<Integer> ids, List<Integer> userIds, List<Integer> projectIds, Boolean current) {
+            , List<Integer> ids, List<Integer> userIds, List<Integer> projectIds, Boolean current
+            , String startDate, String endDate) {
 
-        final WarehouseSigningListRestRequest req = new WarehouseSigningListRestRequest(ids, userIds, projectIds, current);
+        DateTimeFormatter formatter = DateTimeFormatter.ISO_DATE_TIME;
+
+        LocalDateTime localStartDate = Optional.ofNullable(startDate)
+                .map(strDate -> LocalDateTime.parse(strDate, formatter))
+                .orElse(null);
+
+        LocalDateTime localEndDate = Optional.ofNullable(endDate)
+                .map(strDate -> LocalDateTime.parse(strDate, formatter))
+                .orElse(null);
+
+        final WarehouseSigningListRestRequest req = new WarehouseSigningListRestRequest(ids, userIds
+                , projectIds, current, localStartDate, localEndDate);
 
         this.setCommon(req, meta, links, expand);
         this.setDefaults(req);
